Update to package file
	"scripts": {
	"test": "echo \"Error: no test specified\" && exit 1",
	"gulp": "gulp"
},

--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-	"name": "starter",
-	"version": "1.0.0",
-	"description": "TMC Sample Starter",
-	"main": "src/js/main.js",
-	"author": "That Marketing Company",
-	"license": "BSD-3-Clause",
-	"devDependencies": {
-		"gulp": "^3.8.11",
-		"gulp-autoprefixer": "^3.0.0",
-		"gulp-concat": "^2.6.0",
-		"gulp-jshint": "^1.9.2",
-		"jshint-stylish": "^2.0.0",
-		"gulp-sass": "^2.0.4",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-uglify": "^1.4.0",
-		"del": "^2.2.0",
-		"gulp-strip-debug": "^1.0.0",
-		"gulp-util": "^3.0.6",
-		"gulp-minify-css": "*",
-		"gulp-strip-css-comments": "*",
-		"gulp-plumber": "^1.0.0",
-		"gulp-notify": "^2.2.0",
-		"browser-sync": "*",
-		"gulp-imagemin": "^2.3.0",
-		"imagemin-pngquant": "^4.2.0",
-		"gulp-newer": "^0.5.1",
-		"gulp-filter": "^3.0.0",
-		"gulp-watch": "^4.3.5",
-		"run-sequence": "^1.1.5",
-		"yargs": "^4.7.0",
-		"gulp-if": "^2.0.0"
-	}
+  "name": "starter",
+  "version": "1.0.0",
+  "description": "TMC Sample Starter",
+  "main": "src/js/main.js",
+  "author": "That Marketing Company",
+  "license": "BSD-3-Clause",
+	"scripts": {
+	"test": "echo \"Error: no test specified\" && exit 1",
+	"gulp": "gulp"
+},
+  "devDependencies": {
+    "browser-sync": "*",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-install": "^0.6.0",
+    "gulp-jshint": "^1.9.2",
+    "gulp-minify-css": "*",
+    "gulp-newer": "^0.5.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-css-comments": "*",
+    "gulp-strip-debug": "^1.0.0",
+    "gulp-uglify": "^1.4.0",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
+    "imagemin-pngquant": "^4.2.0",
+    "jshint-stylish": "^2.0.0",
+    "run-sequence": "^1.1.5",
+    "yargs": "^4.7.0"
+  }
 }
